--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -22,8 +22,11 @@ XMLSEC_CONFIG_PROGRAM=$(top_builddir)/xmlsec1-config
 all: $(man_MANS) $(XMLSEC_HTML)
 	
 clean-local:
-	( if [ z"$(builddir)" != z"$(srcdir)" ] ; then \
-		@rm -rf $(man_MANS) ; \
+	( if [ z"$(XMLSEC1_MAN_SRC)" != z"$(XMLSEC1_MAN)" ]; \
+		@rm -rf $(XMLSEC1_MAN) ; \
+	fi )
+	( if [ z"$(XMLSEC1_CONFIG_MAN_SRC)" != z"$(XMLSEC1_CONFIG_MAN)" ]; \
+		@rm -rf $(XMLSEC1_CONFIG_MAN) ; \
 	fi )
 
 distclean-local: clean-local
