--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -25,6 +25,9 @@ docs-copy:
 		if [ z"$(srcdir)" != z"$(builddir)" ]; \
 		then \
 		    $(CP) -ru $(srcdir)/*.html $(srcdir)/*.ico $(srcdir)/images $(builddir)/  ; \
+		    chmod u+w $(builddir)/*.html ; \
+		    chmod u+w $(builddir)/*.ico ; \
+		    chmod -R u+w $(builddir)/images ; \
 		fi \
 	)
 
@@ -33,8 +36,6 @@ if BUILD_MAN_DOCS
 man-docs: $(XMLSEC_HTML) docs-copy
 
 $(XMLSEC_HTML): docs-copy $(XMLSEC1_MAN)
-	pwd
-	echo $(XMLSEC_HTML)
 	$(MAN2HTML) $(XMLSEC1_MAN) | \
 		  grep -v '^Content-type: text/html' | \
 		  tr "[:cntrl:]" " " > \
@@ -76,6 +77,7 @@ docs-format:
 endif
 
 clean-local:
+	-rm -f *.stamp
 	( if [ z"$(srcdir)" != z"$(builddir)" ] ; then \
 		chmod -R u+w $(builddir)/images && rm -rf $(builddir)/images ; \
 		chmod -R u+w $(builddir)/src && rm -rf $(builddir)/src ; \
