fix makefiles problems

--- a/configure.ac
+++ b/configure.ac
@@ -21,7 +21,7 @@ AC_SUBST(XMLSEC_VERSION_SUBMINOR)
 AC_SUBST(XMLSEC_VERSION_INFO)
 
 AC_CONFIG_MACRO_DIR(m4)
-AM_INIT_AUTOMAKE([1.7 tar-ustar])
+AM_INIT_AUTOMAKE([1.7 tar-ustar -Wno-portability])
 AC_CONFIG_HEADERS([config.h])
 AM_MAINTAINER_MODE
 
