replace XMLSEC_CRYPTO define with xmlSecGetDefaultCrypto() function

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,9 @@
 NULL =
 
 SAFE_VERSION	= @XMLSEC_VERSION_SAFE@
-SUBDIRS 	= include src apps man docs
-TEST_APP 	= apps/xmlsec1$(EXEEXT)
-DEFAULT_CRYPTO	= @XMLSEC_CRYPTO@
+SUBDIRS 	    = include src apps man docs
+TEST_APP 	    = apps/xmlsec1$(EXEEXT)
+DEFAULT_CRYPTO	= @XMLSEC_DEFAULT_CRYPTO@
 
 bin_SCRIPTS 	= xmlsec1-config
 pkgconfig_DATA 	= xmlsec1.pc @XMLSEC_CRYPTO_PC_FILES_LIST@
