kill XMLSEC_CRYPTO completely

--- a/xmlsecConf.sh.in
+++ b/xmlsecConf.sh.in
@@ -7,7 +7,7 @@ libdir="@libdir@"
 includedir="@includedir@"
 
 XMLSEC_LIBDIR="@XMLSEC_LIBDIR@"
-XMLSEC_INCLUDEDIR="@XMLSEC_CFLAGS@ -DXMLSEC_CRYPTO=NULL"
+XMLSEC_INCLUDEDIR="@XMLSEC_CFLAGS@"
 XMLSEC_LIBS="@XMLSEC_LIBS@"
 MODULE_VERSION="xmlsec-@VERSION@-@XMLSEC_DEFAULT_CRYPTO@"
 
