--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -149,6 +149,7 @@ XMLSEC_OBJS = \
 	$(XMLSEC_INTDIR)\nodeset.obj \
 	$(XMLSEC_INTDIR)\parser.obj \
 	$(XMLSEC_INTDIR)\relationship.obj \
+	$(XMLSEC_INTDIR)\soap.obj \
 	$(XMLSEC_INTDIR)\strings.obj \
 	$(XMLSEC_INTDIR)\templates.obj \
 	$(XMLSEC_INTDIR)\transforms.obj \
@@ -179,6 +180,7 @@ XMLSEC_OBJS_A = \
 	$(XMLSEC_INTDIR_A)\nodeset.obj \
 	$(XMLSEC_INTDIR_A)\parser.obj \
 	$(XMLSEC_INTDIR_A)\relationship.obj \
+	$(XMLSEC_INTDIR_A)\soap.obj \
 	$(XMLSEC_INTDIR_A)\strings.obj \
 	$(XMLSEC_INTDIR_A)\templates.obj \
 	$(XMLSEC_INTDIR_A)\transforms.obj \
