Allow to choose the C runtime library to use, as for libXML/libXSLT

--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -319,11 +319,12 @@ CFLAGS 			= $(CFLAGS) /D "UNICODE" /D "_UNICODE"
 
 # Optimisation and debug symbols.
 !if "$(DEBUG)" == "1"
-CFLAGS 			= $(CFLAGS) /D "_DEBUG" /Od /Z7 /MDd 
+CFLAGS 			= $(CFLAGS) /D "_DEBUG" /Od /Z7 
 !else
-CFLAGS 			= $(CFLAGS) /D "NDEBUG" /O2 /MD
+CFLAGS 			= $(CFLAGS) /D "NDEBUG" /O2 
 !endif
 
+CFLAGS 			= $(CFLAGS) $(CRUNTIME)
 
 # configurable options
 !if "$(WITH_LIBXSLT)" == "1"
