configure: add option to disable documentation
This is useful when xmlsec is bundled as a library in a project, and the
additional dependencies needed to build the documentation cause an
overhead, as only the library is used from the build result anyway.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,10 @@
 NULL =
 
 SAFE_VERSION	= @XMLSEC_VERSION_SAFE@
-SUBDIRS 	    = include src apps man docs
+SUBDIRS 	    = include src apps
+if XMLSEC_DOCS
+SUBDIRS += man docs
+endif
 TEST_APP 	    = apps/xmlsec1$(EXEEXT)
 DEFAULT_CRYPTO	= @XMLSEC_DEFAULT_CRYPTO@
 
