configure: add option to disable applications
This is useful when xmlsec is bundled as a library in a project, and the
building the documentation cause an overhead, as only the library is
used from the build result anyway.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,10 @@
 NULL =
 
 SAFE_VERSION	= @XMLSEC_VERSION_SAFE@
-SUBDIRS 	    = include src apps
+SUBDIRS 	    = include src
+if XMLSEC_APPS
+SUBDIRS += apps
+endif
 if XMLSEC_DOCS
 SUBDIRS += man docs
 endif
