--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -375,6 +375,7 @@ SOLIBS 			= $(LIBS) libxml2.lib
 ALIBS 			= $(LIBS) libxml2_a.lib 
 
 !if "$(WITH_ICONV)" == "1"
+CFLAGS          = $(CFLAGS) /D "LIBXML_ICONV_ENABLED"
 SOLIBS 			= $(SOLIBS) iconv.lib
 ALIBS 			= $(ALIBS) iconv_a.lib
 !endif
