update windows configs

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,11 @@ src/gcrypt/Makefile
 src/gnutls/Makefile
 src/nss/Makefile
 src/openssl/Makefile
+win32/apps_a.int/
+win32/binaries/
+win32/configure.txt
+win32/libxmlsec.int/
+win32/libxmlsec_a.int/
+win32/libxmlsec_mscrypto.int/
+win32/libxmlsec_mscrypto_a.int/
+win32/tmp
