style.css management (roumen)

--- a/docs/api/Makefile.am
+++ b/docs/api/Makefile.am
@@ -32,11 +32,13 @@ EXTRA_DIST = \
 	$(TMPL_DIR) \
 	$(srcdir)/src \
 	$(srcdir)/images \
+	$(srcdir)/style.css \
 	$(NULL)
 
 SOURCE_FILES_TO_COPY = \
 	$(srcdir)/src \
 	$(srcdir)/images \
+	$(srcdir)/style.css \
 	$(srcdir)/*.html \
 	$(srcdir)/*.png \
 	$(NULL)	
@@ -316,7 +318,7 @@ dist-hook:
 	
 clean-local:
 	-rm -rf $(SOURCE_CODE_DIR) $(EXAMPLES_DIR) $(SCAN_DIR)/*.txt $(SGML_DIR) $(XML_DIR)
-	-rm -f *.stamp *.types *.css index.sgml
+	-rm -f *.stamp *.types index.sgml
 	( if [ z"$(TMPL_SRC_DIR)" != z"$(TMPL_DIR)" ] && [ -d "$(TMPL_DIR)" ] ; then \
 		chmod -R u+w $(TMPL_DIR) && rm -rf $(TMPL_DIR) ; \
 	 fi ; )
