make check: replace LD_LIBRARY_PATH with LTDL_LIBRARY_PATH See ltdl documentation: https://www.gnu.org/software/libtool/manual/html_node/Libltdl-interface.html#Libltdl-interface

--- a/Makefile.am
+++ b/Makefile.am
@@ -72,9 +72,9 @@ PRECHECK_COMMANDS = \
 	$(NULL)
 else
 PRECHECK_COMMANDS= \
-	export LD_LIBRARY_PATH="$(ABS_BUILDDIR)/src/.libs:$$LD_LIBRARY_PATH" ; \
+	export LTDL_LIBRARY_PATH="$(ABS_BUILDDIR)/src/.libs:$$LTDL_LIBRARY_PATH" ; \
 	for i in $(XMLSEC_CRYPTO_LIST) ; do \
-	    export LD_LIBRARY_PATH="$(ABS_BUILDDIR)/src/$$i/.libs:$$LD_LIBRARY_PATH" ; \
+	    export LTDL_LIBRARY_PATH="$(ABS_BUILDDIR)/src/$$i/.libs:$$LTDL_LIBRARY_PATH" ; \
 	done && \
 	cd $(ABS_SRCDIR) \
 	$(NULL)	
