--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,29 @@
+# Continuous Integration script for xmlsec
+# Author: Peter Budai <peterbudai@hotmail.com>
+
+# In order to enable appveyor CI in your GitHub repository, please follow the steps
+# described in Appyors's Getting Started:  https://www.appveyor.com/docs/
+#
+# After you add your project to Appveyor, it will recognize this script, and will
+# launch the first build process. Every build runs on a fresh virtual machine which is
+# not shared with other builds and the state of which is not preserved between consequent
+# builds. After the build is finished its virtual machine is decommissioned.
+#
+# You can check the whole build process in the logs, and any later commit will start
+# a new build using a fresh virtual machine.
+
 init:
   - git config --global core.autocrlf input
+
+shallow_clone: true
+
+environment:
+  matrix:
+    # enable shared linking
+    - STATIC: no
+
+    # enable static linking
+    - STATIC: yes
 
 build_script:
   - C:\msys64\usr\bin\pacman --noconfirm --sync --refresh --refresh --sysupgrade --sysupgrade
