win32: enable building only static libraries

--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -415,6 +415,7 @@ ARFLAGS = /nologo
 #
 !if "$(WITH_DEFAULT_CRYPTO)" == "openssl" 
 XMLSEC_DEFAULT_CRYPTO   = "openssl"
+XMLSEC_DEFAULT_CRYPTO_A = "openssla"
 XMLSEC_CRYPTO_CFLAGS   	= $(XMLSEC_OPENSSL_CFLAGS)
 XMLSEC_CRYPTO_SOLIBS  	= $(XMLSEC_OPENSSL_SOLIBS)
 XMLSEC_CRYPTO_ALIBS    	= $(XMLSEC_OPENSSL_ALIBS)
@@ -425,6 +426,7 @@ XMLSEC_CRYPTO_A		    = $(XMLSEC_OPENSSL_A)
 
 !if "$(WITH_DEFAULT_CRYPTO)" == "nss"
 XMLSEC_DEFAULT_CRYPTO   = "nss"
+XMLSEC_DEFAULT_CRYPTO_A = "nssa"
 XMLSEC_CRYPTO_CFLAGS   	= $(XMLSEC_NSS_CFLAGS)
 XMLSEC_CRYPTO_SOLIBS   	= $(XMLSEC_NSS_SOLIBS)
 XMLSEC_CRYPTO_ALIBS    	= $(XMLSEC_NSS_ALIBS)
@@ -435,6 +437,7 @@ XMLSEC_CRYPTO_A		    = $(XMLSEC_NSS_A)
 
 !if "$(WITH_DEFAULT_CRYPTO)" == "mscrypto"
 XMLSEC_DEFAULT_CRYPTO  	= "mscrypto"
+XMLSEC_DEFAULT_CRYPTO_A = "mscryptoa"
 XMLSEC_CRYPTO_CFLAGS   	= $(XMLSEC_MSCRYPTO_CFLAGS)
 XMLSEC_CRYPTO_SOLIBS   	= $(XMLSEC_MSCRYPTO_SOLIBS)
 XMLSEC_CRYPTO_ALIBS    	= $(XMLSEC_MSCRYPTO_ALIBS)
@@ -449,14 +452,17 @@ XMLSEC_CRYPTO_A		    = $(XMLSEC_MSCRYPTO_A)
 
 all : xmlsec xmlseca $(WITH_CRYPTO) apps 
 
-xmlsec : $(XMLSEC_APPS_INTDIR) $(BINDIR)\$(XMLSEC_SO) $(WITH_DEFAULT_CRYPTO)
+xmlsec : $(XMLSEC_APPS_INTDIR) $(BINDIR)\$(XMLSEC_SO) $(XMLSEC_DEFAULT_CRYPTO)
 
-xmlseca :  $(XMLSEC_APPS_INTDIR_A) $(BINDIR)\$(XMLSEC_A) $(WITH_DEFAULT_CRYPTO)
+xmlseca :  $(XMLSEC_APPS_INTDIR_A) $(BINDIR)\$(XMLSEC_A) $(XMLSEC_DEFAULT_CRYPTO_A)
 
-openssl: $(BINDIR)\$(XMLSEC_OPENSSL_SO) $(BINDIR)\$(XMLSEC_OPENSSL_A)
+openssla: $(BINDIR)\$(XMLSEC_OPENSSL_A)
+openssl: $(BINDIR)\$(XMLSEC_OPENSSL_SO) openssla
 
-nss: $(BINDIR)\$(XMLSEC_NSS_SO) $(BINDIR)\$(XMLSEC_NSS_A)
+nssa: $(BINDIR)\$(XMLSEC_NSS_A)
+nss: $(BINDIR)\$(XMLSEC_NSS_SO) nssa
 
+mscryptoa: $(BINDIR)\$(XMLSEC_MSCRYPTO_A)
 mscrypto: $(BINDIR)\$(XMLSEC_MSCRYPTO_SO) $(BINDIR)\$(XMLSEC_MSCRYPTO_A)
 
 apps : $(BINDIR)\$(APP_NAME)
