updated docs and man pages

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,8 @@ docs/api/tmpl/base/*.bak
 docs/api/tmpl/openssl/*.bak
 docs/api/tmpl/nss/*.bak
 docs/api/*.types
+docs/api/sgml.stamp
+docs/api/tmpl.stamp
+docs/api/tmpl/.sentinel
+docs/html.stamp
+
